Agent query: Is the cartoon profile image displaying correctly on the homepage?
Replace placeholder profile image with local asset.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/234b4a1a-9bc4-471e-a8bb-da5c3d7669b6/f5b1f2a3-b831-45ad-88c7-c8547e1c59aa.jpg

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row align-items-center mb-5">
     <div class="col-md-4 text-center">
-        <img src="https://images.unsplash.com/photo-1576558656222-ba66febe3dec" 
+        <img src="{{ url_for('static', filename='images/profile.jpg') }}" 
              alt="Ignacio Garcia" 
              class="profile-image mb-3">
     </div>
