--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin') }}">Admin</a>
+                    </li>
                 </ul>
             </div>
         </div>
