Assistant checkpoint: Updated Cal.com scheduling widget configuration
Assistant generated file changes:
- templates/appointment.html: Update Cal.com widget configuration

---

User prompt:

https://cal.com/jacobo-s.-carballada-vbmhib/30min

--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -7,7 +7,7 @@
 
         <div class="cal-embed-container" style="min-height: 800px; width: 100%;">
             <!-- Cal inline embed code -->
-            <cal-inline-widget src="https://cal.com/jacobo-s.-carballada-vbmhib/30min"></cal-inline-widget>
+            <cal-inline-widget src="https://cal.com/jacobo-s.-carballada-vbmhib/30min" style="min-width:320px;height:100%;"></cal-inline-widget>
         </div>
     </div>
 </div>
