--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
+    <script src="https://app.cal.com/embed.js"></script>
 </head>
 <body>
+    <div id="cal-booking-modal" style="width:100%;height:100vh;position:fixed;z-index:1000;display:none;"></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">Ignacio Garcia</a>
