--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <script src="https://app.cal.com/embed.js"></script>
 </head>
 <body>
-    <div id="cal-booking-modal" style="width:100%;height:100vh;position:fixed;z-index:1000;display:none;"></div>
+    <div id="cal-booking-modal" style="width:100%;height:100vh;position:fixed;z-index:1000;display:none;top:0;left:0;background:rgba(0,0,0,0.8);"></div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">Ignacio Garcia</a>
