--- a/templates/appointment.html
+++ b/templates/appointment.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 
 {% block content %}
@@ -6,21 +5,19 @@
     <div class="col-lg-10 mx-auto">
         <h1 class="mb-4">Schedule an Appointment</h1>
 
-        <div class="cal-embed-container" style="min-height: 800px; width: 100%;">
-            <!-- Cal inline embed code -->
-            <cal-inline-widget src="https://cal.com/jacobo-s.-carballada-vbmhib/30min" style="min-width:320px;height:100%;"></cal-inline-widget>
+        <!-- Updated Cal.com embed code -->
+        <div style="width: 100%; height: 800px; overflow: hidden;">
+            <iframe
+                src="https://cal.com/jacobo-s.-carballada-vbmhib/30min"
+                frameborder="0"
+                style="width: 100%; height: 100%; border: none;"
+            ></iframe>
         </div>
     </div>
 </div>
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://app.cal.com/embed.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-    Cal("init", {
-        origin: "https://cal.com"
-    });
-});
-</script>
+<!-- Remove the Cal.com embed.js as it's not needed with iframe approach -->
 {% endblock %}
+
